--- a/src/app/components/pages/home-page/home-page.component.html
+++ b/src/app/components/pages/home-page/home-page.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-12 col-md-6 col-lg-3 border-r d-flex align-items-center justify-content-center">
             <div class="text-center">
-                <img class="me" src="../../../../assets/images/me.jpg" alt="">
+                <img class="me" src="assets/images/me.jpg" alt="">
                 <div class="fw-bold mt-2">Ejder Kadir Kuzu</div>
                 <div class="text-muted mt-1">Software Developer</div>
                 <div class="d-flex gap-3 mt-1 justify-content-center">
@@ -139,13 +139,13 @@
                     </h2>
                 </div>
                 <div class="col-12 col-lg-4 mt-2">
-                    <img class="w-100 h-100 image" src="../../../../assets/images/software2.jpg" alt="">
+                    <img class="w-100 h-100 image" src="assets/images/software2.jpg" alt="">
                 </div>
                 <div class="col-12 col-lg-4 mt-2">
-                    <img class="w-100 h-100 image" src="../../../../assets/images/futbol1.jpg" alt="">
+                    <img class="w-100 h-100 image" src="assets/images/futbol1.jpg" alt="">
                 </div>
                 <div class="col-12 col-lg-4 mt-2">
-                    <img class="w-100 h-100 image" src="../../../../assets/images/csgo1.jpg" alt="">
+                    <img class="w-100 h-100 image" src="assets/images/csgo1.jpg" alt="">
                 </div>
             </div>
         </div>
