--- a/src/app/components/pages/my-city/my-city.component.html
+++ b/src/app/components/pages/my-city/my-city.component.html
@@ -1,16 +1,16 @@
 <div class="swiper-container main-card">
     <swiper [config]="config">
         <ng-template swiperSlide >
-            <img (click)="scrollToSection('siirt')" src="../../../../assets/images/siirt.jpg">
+            <img (click)="scrollToSection('siirt')" src="assets/images/siirt.jpg">
         </ng-template>
         <ng-template swiperSlide >
-            <img (click)="scrollToSection('siirt1')" src="../../../../assets/images/siirt1.jpg">
+            <img (click)="scrollToSection('siirt1')" src="assets/images/siirt1.jpg">
         </ng-template>
         <ng-template swiperSlide>
-            <img (click)="scrollToSection('siirt2')" src="../../../../assets/images/ihadisesi.jpg">
+            <img (click)="scrollToSection('siirt2')" src="assets/images/ihadisesi.jpg">
         </ng-template>
         <ng-template swiperSlide>
-            <img  (click)="scrollToSection('siirt3')"src="../../../../assets/images/siirt-fistigi.jpg">
+            <img  (click)="scrollToSection('siirt3')"src="assets/images/siirt-fistigi.jpg">
         </ng-template>
     </swiper>
 </div>
@@ -61,7 +61,7 @@
                 </ul>
             </div>
             <div class="col-12 col-lg-6 text-end p-2">
-                <img class="w-100" src="../../../../assets/images/seyir-terasi.jpg" alt="">
+                <img class="w-100" src="assets/images/seyir-terasi.jpg" alt="">
             </div>
         </div>
     </div>
@@ -77,7 +77,7 @@
                 </p>
             </div>
             <div class="col-12 col-lg-6">
-                <img class="w-100" src="../../../../assets/images/isik-hadisesi.jpg" alt="">
+                <img class="w-100" src="assets/images/isik-hadisesi.jpg" alt="">
             </div>
         </div>
     </div>
