--- a/src/app/components/pages/our-team/our-team.component.html
+++ b/src/app/components/pages/our-team/our-team.component.html
@@ -29,10 +29,10 @@
             </p>
         </div>
         <div class="col-12 col-md-3 order-2">
-            <img src="../../../../assets/images/siirt-spor1.png" class="w-100">
+            <img src="assets/images/siirt-spor1.png" class="w-100">
         </div>
         <div class="col-12 col-md-5 mt-3 order-4 order-md-3">
-            <img src="../../../../assets/images/siirt-spor2.png" class="w-100">
+            <img src="assets/images/siirt-spor2.png" class="w-100">
             <p class="text-center">(2000-2001 sezonu Siirt Spor)</p>
         </div>
         <div class="col-12 col-md-7 mt-3 order-3 order-md-4">
