--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -3,7 +3,7 @@
         <div class="row align-items-center">
             <div class="col-4 col-lg-2" routerLink="">
                 <div class="about-me">
-                    <img src="../../../../assets/images/about-me.jpg">
+                    <img src="assets/images/about-me.jpg">
                 </div>
             </div>
             <div class="col-10 collapse">
