--- a/src/app/components/pages/my-interests/my-interests.component.html
+++ b/src/app/components/pages/my-interests/my-interests.component.html
@@ -1,7 +1,7 @@
 <div class="main-card pl-0">
     <div class="row">
         <div class="col-12 col-lg-6 order-2 order-lg-1">
-            <img class="w-100 left-image" src="../../../../assets/images/software.jpg" alt="">
+            <img class="w-100 left-image" src="assets/images/software.jpg" alt="">
         </div>
         <div class="col-12 col-lg-6 order-1 order-lg-2">
             <h2>Yazılım - Bilgisayar</h2>
@@ -47,14 +47,14 @@
             </div>
         </div>
         <div class="col-12 col-lg-6 order-2">
-            <img class="w-100 right-image" src="../../../../assets/images/futbol.jpg" alt="">
+            <img class="w-100 right-image" src="assets/images/futbol.jpg" alt="">
         </div>
     </div>
 </div>
 <div class="main-card mt-5 pl-0">
     <div class="row">
         <div class="col-12 col-lg-6 order-2 order-lg-1">
-            <img class="w-100 left-image" src="../../../../assets/images/csgo2.jpg" alt="">
+            <img class="w-100 left-image" src="assets/images/csgo2.jpg" alt="">
         </div>
         <div class="col-12 col-lg-6 order-1 order-lg-2">
             <h2>CS:GO</h2>
