--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -29,7 +29,7 @@
                         </a>
                     </div>
                     <div class="col text-end" routerLink="login">
-                        <button class="btn btn-secondary"> Giriş</button>
+                        <button class="btn btn-secondary w-50"> Giriş</button>
                     </div>
                 </div>
             </div>
