--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-12 col-md-8 col-lg-5">
         <div class="main-card">
-            <form action="http://localhost/backend/login.php" [formGroup]="loginForm">
+            <form [formGroup]="loginForm">
                 <div class="mb-3">
                     <label for="email" class="form-label">Email veya kullanıcı adı</label>
                     <input [ngClass]="{ 'is-invalid': email?.invalid   && (email?.dirty || email?.touched)}" formControlName="email"
