--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -29,7 +29,8 @@
                         </a>
                     </div>
                     <div class="col text-end" routerLink="login">
-                        <button class="btn btn-secondary w-50"> Giriş</button>
+                        <button class="btn btn-secondary w-50" *ngIf="isLoggedIn()"> Giriş</button>
+                        <button class="btn btn-danger w-50" *ngIf="!isLoggedIn()" (click)="logout()" >Çıkış</button>
                     </div>
                 </div>
             </div>
