--- a/src/app/components/pages/contact/contact.component.html
+++ b/src/app/components/pages/contact/contact.component.html
@@ -29,7 +29,7 @@
                     <button class="btn btn-secondary w-100" (click)="clear()">Temizle</button>
                 </div>
                 <div class="col-6">
-                    <button class="btn btn-primary w-100" [disabled]="loginForm.invalid">Gönder</button>
+                    <button class="btn btn-primary w-100" [disabled]="loginForm.invalid" (click)="send()">Gönder</button>
                 </div>
             </div>
         </div>
